<resources>
    <string name="app_name">MotivLearn</string>


    <!--intro page -->
    <string name="first_string">Turn your learning process into  \n  a fun challenge journey</string>
    <string name="secound_string">Learn more, improve your skills and  \n be "only one" in your field</string>
    <string name="thired_string">Solve challenges, make achievement, \n communicate with colleagues and expand your knowledge area </string>


    <!--register page -->
    <string name="title">REGISTER</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="department">Department :</string>
    <string name="department1">SWE</string>
    <string name="department2">IT</string>
    <string name="department3">CS</string>
    <string name="department4">IS</string>
    <string name="register_btn">Register</string>
    <string name="register_q">Have an account?</string>
    <string name="register_error_empty">Fill all fields please</string>
    <string name="register_error_email">Write a ksu email please</string>
    <string name="register_error_password">Passwords does not match</string>
    <string name="register_error_EmailExists">Email already exists </string>
    <string name="register_success">you have been registered successfully </string>

    <!--suggest Video page -->
    <string name="suggestVideo_error_empty">Fill the field please</string>
    <string name="suggestVideo_error_format">Enter the link with http:// format</string>


    <!--login page -->
    <string name="login_title">LOGIN</string>
    <string name="login_btn">Login</string>
    <string name="login_q">Not a member?</string>
    <string name="login_error_empty">Fill all fields please</string>
    <string name="login_error_notFound">Incorrect email or password</string>
    <string name="login_success">logged in successfully</string>
    <!--Teacher Services page -->
    <string name="Create_challenge">Create Public Challenge</string>
    <string name="Suggest_challenge">Suggest Challenge</string>
    <string name="Suggest_video">Suggest Educational Video</string>

    <!--Student Services page -->
    <string name="Create_group_challenge">Create Group Challenge</string>
    <string name="Record_achievement">Record Achievement</string>
    <string name="Watch_video">Watch Educational Video</string>
    <string name="Join_group_challenge">Join Group Challenge</string>


    <!--suggest Video-->
    <string name="Video_hint">Write the video link in the next field:</string>
    <string name="URL">https://</string>
    <string name="video_title">Suggest Video</string>
    <string name="blankT">Fill Blank</string>


    <!--all questions -->
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="enterQ">    Enter question</string>
    <string name="enterA">   Enter answer</string>
    <string name="submit">Submit</string>

    <!--buttons-->
    <string name="Submit">Submit</string>
    <string name="addblank">Add blank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="planets_array">
        <item>Multiple choices</item>
        <item>Code output</item>
        <item>Puzzle</item>
        <item>Fill blanks</item>

    </string-array>


    <string-array name="planets_array2">
        <item>java</item>
        <item>javascript</item>
        <item>c</item>
        <item>html</item>
        <item>css</item>
        <item>php</item>
        <item>security</item>
        <item>ethics</item>
        <item>network</item>
        <item>swe</item>

    </string-array>

    <!--- create public challenge -->

    <string name="fillblank_empty">write the question with 1 blank at least</string>
    <string name="fillblank_noblank">add 1 blank at least</string>
    <string name="fillblank_emptyblank">write the answer between the double brackets</string>

    <string name="multichoices_emptyQuestion">you have to fill the question field</string>
    <string name="multichoices_noAnswer">please, check the correct choice</string>
    <string name="multichoices_fewChoices">write 2 choices at least</string>
    <string name="multichoices_validAnswer">check a valid choice please</string>

    <string name="codeoutput_empty">Fill all fields please</string>


    <string name="bad_connection">poor connection</string>
    <string name="successCreation">the challenge have been created successfully</string>
    <string name="permission_camera_rationale">permissioncamerarationale</string>
    <string name="ok">ok</string>
    <string name="share_using">Share Your Room ID</string>


</resources>
