<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/pink4"
    tools:context="com.example.jana.motivlearn.Login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:fontFamily="cursive"
        android:text="@string/login_title"
        android:textColor="#8767b3"
        android:textSize="36sp"
        android:textStyle="bold" />


    <!-- email -->
    <EditText
        android:id="@+id/editText7"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_above="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/oval"
        android:drawableLeft="@drawable/ic_action_em"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textCapCharacters|textEmailAddress"
        android:paddingLeft="10dp"
        android:singleLine="false"
        android:textColor="#8767b3"
        android:textColorHint="#8767b3"
        android:textSize="15sp" />

    <requestFocus />

    <!-- pass -->

    <EditText
        android:id="@+id/editText5"
        android:layout_width="270dp"
        android:layout_height="43dp"
        android:layout_alignLeft="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
        android:layout_centerVertical="true"
        android:background="@drawable/oval"
        android:drawableLeft="@drawable/ic_action_pas"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="false"
        android:textColor="#8767b3"
        android:textColorHint="#8767b3"
        android:textSize="15sp" />


    <!-- register button-->
    <Button
        android:id="@+id/button3"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@drawable/button"
        android:paddingBottom="1dp"
        android:text="@string/register_btn"
        android:textColor="#c273cc"
        android:textSize="12sp"
        android:textStyle="bold" />


    <!-- Not a member?? -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:text="@string/login_q"
        android:textColor="#8767b3" />


    <!-- login button  -->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:background="@drawable/ovalbutton"
        android:text="@string/login_btn"
        android:textColor="#ffffff" />

</RelativeLayout>
