<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jana.motivlearn.tab5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="45dp">
        <!-- 1 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/r11"
                    android:padding="0dp"
                    android:scaleType="fitEnd"
                    android:id="@+id/imageView" />

                <Button
                    android:id="@+id/RecordAchievement"
                    android:layout_width="115dp"
                    android:layout_height="140dp"
                    android:layout_alignTop="@+id/imageView"
                    android:layout_marginEnd="26dp"
                    android:layout_toStartOf="@+id/WatchVideo"
                    android:background="@drawable/button"
                    android:text="@string/Record_achievement"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <!--  2  -->

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="94dp"
                    android:layout_marginLeft="175dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/r22"
                    android:id="@+id/imageView2" />

                <Button
                    android:id="@+id/WatchVideo"
                    android:layout_width="110dp"
                    android:layout_height="140dp"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView"
                    android:background="@drawable/button"
                    android:text="@string/Watch_video"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--  3  -->

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="170dp"
                    android:background="@drawable/r33"
                    android:padding="0dp"
                    android:scaleType="fitEnd"
                    android:id="@+id/imageView3" />


                <Button
                    android:id="@+id/SuggestVideo"
                    android:layout_width="110dp"
                    android:layout_height="140dp"
                    android:layout_alignStart="@+id/RecordAchievement"
                    android:layout_alignTop="@+id/imageView3"
                    android:background="@drawable/button"
                    android:text="@string/Suggest_video"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <!--  4  -->

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="250dp"
                    android:layout_marginLeft="175dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/r44"
                    android:id="@+id/imageView4" />


                <Button
                    android:id="@+id/SuggestChallenge"
                    android:layout_width="90dp"
                    android:layout_height="140dp"
                    android:layout_alignTop="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView3"
                    android:background="@drawable/button"
                    android:text="@string/Suggest_challenge"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--  5  -->

                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="328dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/r55"
                    android:padding="0dp"
                    android:scaleType="fitEnd"
                    android:id="@+id/imageView5" />


                <Button
                    android:id="@+id/CreateGroupChallenge"
                    android:layout_width="115dp"
                    android:layout_height="140dp"
                    android:layout_alignEnd="@+id/SuggestVideo"
                    android:layout_alignTop="@+id/imageView5"
                    android:background="@drawable/button"
                    android:text="@string/Create_group_challenge"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <!--  6  -->
                <ImageView
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="407dp"
                    android:layout_marginLeft="175dp"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    android:background="@drawable/r66"
                    android:id="@+id/imageView6" />

                <Button
                    android:id="@+id/JoinGroupChallenge"
                    android:layout_width="115dp"
                    android:layout_height="140dp"
                    android:layout_alignEnd="@+id/WatchVideo"
                    android:layout_alignTop="@+id/imageView6"
                    android:background="@drawable/button"
                    android:text="@string/Join_group_challenge"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>
            ></LinearLayout>
    </ScrollView>
</RelativeLayout>
